--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -1,4 +1,4 @@
 dependencies {
-   api(name:'leanConnectInterfaceLib-debug', ext:'aar')
-   api(name:'leanConnectLibForServices-debug', ext:'aar')
+   compile(name:'leanConnectInterfaceLib-debug', ext:'aar')
+   compile(name:'leanConnectLibForServices-debug', ext:'aar')
 }
