--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -1,3 +1,7 @@
+defaultConfig {
+    multiDexEnabled true
+}
+
 dependencies {
    compile(name:'leanConnectInterfaceLib-debug', ext:'aar')
    compile(name:'leanConnectLibForServices-debug', ext:'aar')
