--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -1,10 +1,12 @@
 android {
     defaultConfig {
+        minSdkVersion 22
+        targetSdkVersion 29
         multiDexEnabled true
     }
 }
 
 dependencies {
-   implementation(name:'leanConnectInterfaceLib-debug', ext:'aar')
-   implementation(name:'leanConnectLibForServices-debug', ext:'aar')
+   compile(name:'leanConnectInterfaceLib-debug', ext:'aar')
+   compile(name:'leanConnectLibForServices-debug', ext:'aar')
 }
