--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -1,11 +1,18 @@
-android {
-   defaultConfig {
-      multiDexEnabled true
+repositories{    
+ jcenter()
+   flatDir {
+     dirs 'libs'
    }
 }
 
 dependencies {
-   compile 'com.android.support:multidex:1.0.0'
    compile(name:'leanConnectInterfaceLib-debug', ext:'aar')
    compile(name:'leanConnectLibForServices-debug', ext:'aar')
+}
+
+android {
+   packagingOptions {
+      exclude 'META-INF/NOTICE'
+      exclude 'META-INF/LICENSE'
+   }
 }
