--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -1,18 +1,17 @@
-repositories{    
- jcenter()
-   flatDir {
-     dirs 'libs'
+android {
+   defaultConfig {
+      minSdkVersion 22
+      targetSdkVersion 29
+      multiDexEnabled true
    }
+}
+
+dexOptions {
+   javaMaxHeapSize "4g"
 }
 
 dependencies {
+   compile 'com.android.support:multidex:1.0.0'
    compile(name:'leanConnectInterfaceLib-debug', ext:'aar')
    compile(name:'leanConnectLibForServices-debug', ext:'aar')
-}
-
-android {
-   packagingOptions {
-      exclude 'META-INF/NOTICE'
-      exclude 'META-INF/LICENSE'
-   }
 }
