--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -1,11 +1,19 @@
 android {
+   compileSdkVersion 29
+   buildToolsVersion '29.0.2'
+
    defaultConfig {
-      multiDexEnabled true
+      minSdkVersion 22
+      targetSdkVersion 29
    }
+
+   compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-   compile 'com.android.support:multidex:1.0.0'
    compile(name:'leanConnectInterfaceLib-debug', ext:'aar')
    compile(name:'leanConnectLibForServices-debug', ext:'aar')
 }
