--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -2,10 +2,16 @@ android {
    compileSdkVersion 29
    buildToolsVersion '29.0.2'
 
+   defaultConfig {
+      jackOptions {
+         enabled true
+      }
+   }
+
    compileOptions {
-      sourceCompatibility JavaVersion.VERSION_1_7
-      targetCompatibility JavaVersion.VERSION_1_7
-    }
+      sourceCompatibility JavaVersion.VERSION_1_8
+      targetCompatibility JavaVersion.VERSION_1_8
+   }
 }
 
 dependencies {
