--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -1,4 +1,11 @@
 android {
+   compileSdkVersion 29
+   buildToolsVersion '29.0.2'
+
+   dexOptions {
+      incremental true
+   }
+
    compileOptions {
       sourceCompatibility JavaVersion.VERSION_1_8
       targetCompatibility JavaVersion.VERSION_1_8
