--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -5,14 +5,11 @@ android {
    dexOptions {
       incremental true
    }
-
-   compileOptions {
-      sourceCompatibility JavaVersion.VERSION_1_8
-      targetCompatibility JavaVersion.VERSION_1_8
-   }
 }
 
 dependencies {
    compile(name:'leanConnectInterfaceLib-debug', ext:'aar')
    compile(name:'leanConnectLibForServices-debug', ext:'aar')
+   sourceCompatibility = 1.7
+   targetCompatibility = 1.7
 }
