--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -1,4 +1,27 @@
+buildscript {
+    repositories {
+        google()
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:4.1.1'
+    }
+}
+
+allprojects {
+    repositories {
+        google()
+        jcenter()
+        flatDir {
+            dirs 'src/main/libs'
+        }
+    }
+}
+
 android {
+  compileSdkVersion 29
+  buildToolsVersion '29.0.2'
+
   compileOptions {
     sourceCompatibility JavaVersion.VERSION_1_8
     targetCompatibility JavaVersion.VERSION_1_8
@@ -6,6 +29,6 @@ android {
 }
 
 dependencies {
-   compile(name:'leanConnectInterfaceLib-debug', ext:'aar')
-   compile(name:'leanConnectLibForServices-debug', ext:'aar')
+   api(name:'leanConnectInterfaceLib-debug', ext:'aar')
+   api(name:'leanConnectLibForServices-debug', ext:'aar')
 }
