--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -1,12 +1,16 @@
 buildscript {
-    dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.1'
-    }
+  dependencies {
+    classpath 'com.android.tools.build:gradle:4.1.1'
+  }
 }
 
 android {
   compileSdkVersion 29
   buildToolsVersion '29.0.2'
+
+  dexOptions {
+    incremental true
+  }
 
   compileOptions {
     sourceCompatibility JavaVersion.VERSION_1_8
@@ -15,6 +19,6 @@ android {
 }
 
 dependencies {
-   api(name:'leanConnectInterfaceLib-debug', ext:'aar')
-   api(name:'leanConnectLibForServices-debug', ext:'aar')
+  api(name:'leanConnectInterfaceLib-debug', ext:'aar')
+  api(name:'leanConnectLibForServices-debug', ext:'aar')
 }
