--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -1,4 +1,8 @@
 buildscript {
+  repositories {
+    jcenter()
+  }
+  
   dependencies {
     classpath 'com.android.tools.build:gradle:4.1.1'
   }
