--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -15,6 +15,6 @@ android {
 }
 
 dependencies {
-  api(name:'leanConnectInterfaceLib-debug', ext:'aar')
-  api(name:'leanConnectLibForServices-debug', ext:'aar')
+  compile(name:'leanConnectInterfaceLib-debug', ext:'aar')
+  compile(name:'leanConnectLibForServices-debug', ext:'aar')
 }
