--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -1,12 +1,29 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:4.1.1'
+    }
+}
+
+allprojects {
+    repositories {
+        google()
+        jcenter()
+        flatDir {
+            dirs 'src/main/libs'
+        }
+    }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
+
 android {
   compileSdkVersion 29
   buildToolsVersion '29.0.2'
-
-  defaultConfig {
-    jackOptions {
-      enabled true
-    }
-  }
 
   compileOptions {
     sourceCompatibility JavaVersion.VERSION_1_8
