--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -3,7 +3,14 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.0.1'
+    classpath 'com.android.tools.build:gradle:4.1.1'
+  }
+}
+
+allprojects {
+  repositories {
+    jcenter()
+    maven { url "https://maven.google.com" }
   }
 }
 
