--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id 'java-library'
+}
+
 buildscript {
   repositories {
     maven {url "https://maven.google.com" }
@@ -7,8 +11,6 @@ buildscript {
     classpath 'com.android.tools.build:gradle:4.1.1'
   }
 }
-
-apply plugin: 'java-library'
 
 android {
   compileSdkVersion 29
