--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -1,7 +1,3 @@
-plugins {
-    id 'java-library'
-}
-
 buildscript {
   repositories {
     maven {url "https://maven.google.com" }
@@ -30,6 +26,6 @@ android {
 }
 
 dependencies {
-  api(name:'leanConnectInterfaceLib-debug', ext:'aar')
-  api(name:'leanConnectLibForServices-debug', ext:'aar')
+  compile(name:'leanConnectInterfaceLib-debug', ext:'aar')
+  compile(name:'leanConnectLibForServices-debug', ext:'aar')
 }
