--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -17,10 +17,11 @@ android {
     targetSdkVersion 29
     versionCode 2
     versionName '0.2'
+    multiDexEnabled true
   }
 
   dexOptions {
-    incremental true
+    javaMaxHeapSize "4g"
   }
 
   compileOptions {
@@ -30,6 +31,7 @@ android {
 }
 
 dependencies {
+  compile 'com.android.support:multidex:1.0.0'
   compile(name:'leanConnectInterfaceLib-debug', ext:'aar')
   compile(name:'leanConnectLibForServices-debug', ext:'aar')
 }
