--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -4,7 +4,7 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:4.1.1'
+    classpath 'com.android.tools.build:gradle:4.1.3'
   }
 }
 
@@ -15,8 +15,8 @@ android {
   defaultConfig {
     minSdkVersion 22
     targetSdkVersion 29
-    versionCode 2
-    versionName '0.2'
+    versionCode 3
+    versionName '0.3'
     multiDexEnabled true
   }
 
@@ -32,6 +32,6 @@ android {
 
 dependencies {
   compile 'com.android.support:multidex:1.0.0'
-  compile(name:'leanConnectInterfaceLib-debug', ext:'aar')
-  compile(name:'leanConnectLibForServices-debug', ext:'aar')
+  api(name:'leanConnectInterfaceLib-debug', ext:'aar')
+  api(name:'leanConnectLibForServices-debug', ext:'aar')
 }
