--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -2,9 +2,6 @@ buildscript {
   repositories {
     maven {url "https://maven.google.com" }
     jcenter()
-    flatDir {
-      dirs 'libs'
-    }
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:4.1.3'
@@ -34,6 +31,7 @@ android {
 }
 
 dependencies {
+  implementation 'com.google.android.material:material:1.3.0'
   compile 'com.android.support:multidex:1.0.0'
   compile(name:'leanConnectInterfaceLib-debug', ext:'aar')
   compile(name:'leanConnectLibForServices-debug', ext:'aar')
