--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -2,6 +2,9 @@ buildscript {
   repositories {
     maven {url "https://maven.google.com" }
     jcenter()
+    flatDir {
+      dirs 'src/main/libs'
+    }
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:4.1.3'
