--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -2,9 +2,6 @@ buildscript {
   repositories {
     maven {url "https://maven.google.com" }
     jcenter()
-    flatDir {
-      dirs 'src/main/libs'
-    }
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:4.1.3'
@@ -35,6 +32,7 @@ android {
 
 dependencies {
   compile 'com.android.support:multidex:1.0.0'
-  compile(name:'leanConnectInterfaceLib-debug', ext:'aar')
-  compile(name:'leanConnectLibForServices-debug', ext:'aar')
+  //compile(name:'leanConnectInterfaceLib-debug', ext:'aar')
+  //compile(name:'leanConnectLibForServices-debug', ext:'aar')
+  implementation fileTree(include: ['*.aar'], dir: 'libs')
 }
