--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -32,7 +32,6 @@ android {
 
 dependencies {
   compile 'com.android.support:multidex:1.0.0'
-  //compile(name:'leanConnectInterfaceLib-debug', ext:'aar')
-  //compile(name:'leanConnectLibForServices-debug', ext:'aar')
-  compile fileTree(include: ['*.aar'], dir: 'libs')
+  compile(name:'leanConnectInterfaceLib-debug', ext:'aar')
+  compile(name:'leanConnectLibForServices-debug', ext:'aar')
 }
