--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -2,6 +2,9 @@ buildscript {
   repositories {
     maven {url "https://maven.google.com" }
     jcenter()
+    flatDir {
+        dirs 'libs'
+    }
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:4.1.3'
@@ -27,6 +30,11 @@ android {
   compileOptions {
     sourceCompatibility JavaVersion.VERSION_1_8
     targetCompatibility JavaVersion.VERSION_1_8
+  }
+
+  packagingOptions {
+    exclude 'META-INF/NOTICE'
+    exclude 'META-INF/LICENSE'
   }
 }
 
