--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -3,7 +3,7 @@ buildscript {
     maven {url "https://maven.google.com" }
     jcenter()
     flatDir {
-        dirs 'libs'
+        dirs 'src/android/libs'
     }
   }
   dependencies {
@@ -30,11 +30,6 @@ android {
   compileOptions {
     sourceCompatibility JavaVersion.VERSION_1_8
     targetCompatibility JavaVersion.VERSION_1_8
-  }
-
-  packagingOptions {
-    exclude 'META-INF/NOTICE'
-    exclude 'META-INF/LICENSE'
   }
 }
 
