--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -1,6 +1,7 @@
 buildscript {
   repositories {
-    maven {url "https://maven.google.com" }
+    //maven {url "https://maven.google.com" }
+    google()
     jcenter()
   }
   dependencies {
