--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -1,7 +1,6 @@
 buildscript {
   repositories {
-    //maven {url "https://maven.google.com" }
-    google()
+    maven {url "https://maven.google.com" }
     jcenter()
   }
   dependencies {
