--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -24,10 +24,10 @@ android {
     javaMaxHeapSize "4g"
   }*/
 
-  compileOptions {
+  /*compileOptions {
     sourceCompatibility JavaVersion.VERSION_1_8
     targetCompatibility JavaVersion.VERSION_1_8
-  }
+  }*/
 }
 
 dependencies {
