--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -17,7 +17,7 @@ android {
     targetSdkVersion 29
     versionCode 3
     versionName '0.3'
-    multiDexEnabled true
+    //multiDexEnabled true
   }
 
   /*dexOptions {
@@ -31,7 +31,7 @@ android {
 }
 
 dependencies {
-  compile 'com.android.support:multidex:1.0.0'
+  //compile 'com.android.support:multidex:1.0.0'
   compile(name:'leanConnectInterfaceLib-debug', ext:'aar')
   compile(name:'leanConnectLibForServices-debug', ext:'aar')
 }
