--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -3,7 +3,7 @@ buildscript {
     maven {url "https://maven.google.com" }
     jcenter()
     flatDir {
-      dirs 'libs'
+      dirs 'src/main/libs'
     }
   }
   dependencies {
