--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -1,7 +1,10 @@
-repositories{
-  jcenter()
-  flatDir{
-    dirs 'src/main/libs'
+buildscript {
+  repositories {
+    maven {url "https://maven.google.com" }
+    jcenter()
+  }
+  dependencies {
+    classpath 'com.android.tools.build:gradle:4.1.3'
   }
 }
 
@@ -14,6 +17,11 @@ android {
     targetSdkVersion 29
     versionCode 3
     versionName '0.3'
+    multiDexEnabled true
+  }
+
+  dexOptions {
+    javaMaxHeapSize "4g"
   }
 
   compileOptions {
@@ -23,6 +31,7 @@ android {
 }
 
 dependencies {
+  compile 'com.android.support:multidex:1.0.0'
   compile(name:'leanConnectInterfaceLib-debug', ext:'aar')
   compile(name:'leanConnectLibForServices-debug', ext:'aar')
 }
