--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -32,6 +32,6 @@ android {
 
 dependencies {
   compile 'com.android.support:multidex:1.0.0'
-  compile(name:'leanConnectInterfaceLib-debug', ext:'aar')
-  compile(name:'leanConnectLibForServices-debug', ext:'aar')
+  compile(name:'leanConnectInterfaceLib', ext:'aar')
+  compile(name:'leanConnectLibForServices', ext:'aar')
 }
