--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -8,6 +8,16 @@ buildscript {
   }
 }
 
+allprojects {
+    repositories {
+        maven {url "https://maven.google.com" }
+        jcenter()
+        flatDir {
+            dirs 'src/android/libs'
+        }
+    }
+}
+
 android {
   compileSdkVersion 29
   buildToolsVersion '29.0.2'
