--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -13,7 +13,7 @@ allprojects {
         maven {url "https://maven.google.com" }
         jcenter()
         flatDir {
-            dirs 'src/android/libs'
+            dirs 'libs'
         }
     }
 }
