--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -41,6 +41,7 @@ android {
 }
 
 dependencies {
+  compile 'androidx.appcompat:appcompat:1.2.0'
   compile 'com.android.support:multidex:1.0.0'
   compile(name:'leanConnectInterfaceLib-debug', ext:'aar')
   compile(name:'leanConnectLibForServices-debug', ext:'aar')
