--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -4,10 +4,12 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:4.1.3'
+    //classpath 'com.android.tools.build:gradle:4.1.3'
+    classpath 'com.android.tools.build:gradle:7.1.1'
   }
 }
 
+/*
 allprojects {
     repositories {
         maven {url "https://maven.google.com" }
@@ -17,16 +19,27 @@ allprojects {
         }
     }
 }
+*/
+
+allprojects {
+    repositories {
+        google()
+        jcenter()
+        flatDir {
+            dirs 'libs'
+        }
+    }
+}
 
 android {
-  compileSdkVersion 29
+  compileSdk 29
   buildToolsVersion '29.0.2'
 
   defaultConfig {
     minSdkVersion 22
-    targetSdkVersion 29
-    versionCode 6
-    versionName '0.6'
+    targetSdkVersion 31
+    versionCode 10
+    versionName '0.10'
     multiDexEnabled true
   }
 
@@ -41,8 +54,8 @@ android {
 }
 
 dependencies {
-  compile 'androidx.appcompat:appcompat:1.2.0'
-  compile 'com.android.support:multidex:1.0.0'
-  compile(name:'leanConnectInterfaceLib-debug', ext:'aar')
-  compile(name:'leanConnectLibForServices-debug', ext:'aar')
+  implementation 'androidx.appcompat:appcompat:1.4.1'
+  implementation 'com.android.support:multidex:1.0.0'
+  api(name:'leanConnectInterfaceLib-debug', ext:'aar')
+  api(name:'leanConnectLibForServices-debug', ext:'aar')
 }
