--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -1,15 +1,14 @@
+/*
 buildscript {
   repositories {
     maven {url "https://maven.google.com" }
     jcenter()
   }
   dependencies {
-    //classpath 'com.android.tools.build:gradle:4.1.3'
     classpath 'com.android.tools.build:gradle:7.1.1'
   }
 }
 
-/*
 allprojects {
     repositories {
         maven {url "https://maven.google.com" }
@@ -20,6 +19,16 @@ allprojects {
     }
 }
 */
+
+buildscript {
+    repositories {
+        google()
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.1.1'
+    }
+}
 
 allprojects {
     repositories {
@@ -37,15 +46,17 @@ android {
 
   defaultConfig {
     minSdkVersion 22
-    targetSdkVersion 31
+    targetSdk 31
     versionCode 10
     versionName '0.10'
-    multiDexEnabled true
+    //multiDexEnabled true
   }
 
+  /*
   dexOptions {
     javaMaxHeapSize "4g"
   }
+  */
 
   compileOptions {
     sourceCompatibility JavaVersion.VERSION_1_8
@@ -59,3 +70,12 @@ dependencies {
   api(name:'leanConnectInterfaceLib-debug', ext:'aar')
   api(name:'leanConnectLibForServices-debug', ext:'aar')
 }
+
+/*
+dependencies {
+  implementation 'androidx.appcompat:appcompat:1.4.1'
+  implementation 'com.android.support:multidex:1.0.0'
+  compile(name:'leanConnectInterfaceLib-debug', ext:'aar')
+  compile(name:'leanConnectLibForServices-debug', ext:'aar')
+}
+*/
