--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -1,37 +1,32 @@
 buildscript {
   repositories {
-    maven {url "https://maven.google.com" }
+    google()
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:4.1.3'
+    classpath 'com.android.tools.build:gradle:7.1.1'
   }
 }
 
 allprojects {
-    repositories {
-        maven {url "https://maven.google.com" }
-        jcenter()
-        flatDir {
-            dirs 'libs'
-        }
+  repositories {
+    google()
+    jcenter()
+    flatDir {
+      dirs 'libs'
     }
+  }
 }
 
 android {
-  compileSdkVersion 29
-  buildToolsVersion '29.0.2'
+  compileSdkVersion 31
+  buildToolsVersion '30.0.2'
 
   defaultConfig {
     minSdkVersion 22
-    targetSdkVersion 29
-    versionCode 6
-    versionName '0.6'
-    multiDexEnabled true
-  }
-
-  dexOptions {
-    javaMaxHeapSize "4g"
+    targetSdkVersion 31
+    versionCode 10
+    versionName '0.10'
   }
 
   compileOptions {
@@ -41,8 +36,8 @@ android {
 }
 
 dependencies {
-  compile 'androidx.appcompat:appcompat:1.2.0'
-  compile 'com.android.support:multidex:1.0.0'
-  compile(name:'leanConnectInterfaceLib-debug', ext:'aar')
-  compile(name:'leanConnectLibForServices-debug', ext:'aar')
+  implementation 'androidx.appcompat:appcompat:1.4.1'
+  implementation 'com.android.support:multidex:1.0.0'
+  api(name:'leanConnectInterfaceLib-debug', ext:'aar')
+  api(name:'leanConnectLibForServices-debug', ext:'aar')
 }
