--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -1,21 +1,21 @@
 buildscript {
   repositories {
-    google()
+    maven {url "https://maven.google.com" }
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:7.1.1'
+    classpath 'com.android.tools.build:gradle:4.1.3'
   }
 }
 
 allprojects {
-  repositories {
-    google()
-    jcenter()
-    flatDir {
-      dirs 'libs'
+    repositories {
+        maven {url "https://maven.google.com" }
+        jcenter()
+        flatDir {
+            dirs 'libs'
+        }
     }
-  }
 }
 
 android {
@@ -27,6 +27,11 @@ android {
     targetSdkVersion 31
     versionCode 10
     versionName '0.10'
+    multiDexEnabled true
+  }
+
+  dexOptions {
+    javaMaxHeapSize "4g"
   }
 
   compileOptions {
@@ -37,6 +42,7 @@ android {
 
 dependencies {
   implementation 'androidx.appcompat:appcompat:1.4.1'
+  implementation 'com.android.support:multidex:1.0.0'
   api(name:'leanConnectInterfaceLib-debug', ext:'aar')
   api(name:'leanConnectLibForServices-debug', ext:'aar')
 }
