--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -1,21 +1,21 @@
 buildscript {
   repositories {
-    maven {url "https://maven.google.com" }
+    google()
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:4.1.3'
+    classpath 'com.android.tools.build:gradle:7.1.1'
   }
 }
 
 allprojects {
-    repositories {
-        maven {url "https://maven.google.com" }
-        jcenter()
-        flatDir {
-            dirs 'libs'
-        }
+  repositories {
+    google()
+    jcenter()
+    flatDir {
+      dirs 'libs'
     }
+  }
 }
 
 android {
@@ -27,11 +27,6 @@ android {
     targetSdkVersion 31
     versionCode 10
     versionName '0.10'
-    multiDexEnabled true
-  }
-
-  dexOptions {
-    javaMaxHeapSize "4g"
   }
 
   compileOptions {
@@ -42,7 +37,6 @@ android {
 
 dependencies {
   implementation 'androidx.appcompat:appcompat:1.4.1'
-  implementation 'com.android.support:multidex:1.0.0'
   api(name:'leanConnectInterfaceLib-debug', ext:'aar')
   api(name:'leanConnectLibForServices-debug', ext:'aar')
 }
