--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -27,7 +27,8 @@ android {
     targetSdkVersion 31
     versionCode 10
     versionName '0.10'
-    //multiDexEnabled true
+    multiDexEnabled true
+    androidXCore = "1.7.0"
   }
 
   compileOptions {
@@ -38,7 +39,7 @@ android {
 
 dependencies {
   implementation 'androidx.appcompat:appcompat:1.4.1'
-  //implementation 'androidx.multidex:multidex:2.0.1'
+  implementation 'androidx.multidex:multidex:2.0.1'
   api(name:'leanConnectInterfaceLib-debug', ext:'aar')
   api(name:'leanConnectLibForServices-debug', ext:'aar')
 }
