--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -21,14 +21,14 @@ allprojects {
 android {
   compileSdkVersion 31
   buildToolsVersion '30.0.2'
-  androidXCore "1.7.0"
+  androidXCore "1.6.0"
 
   defaultConfig {
     minSdkVersion 22
     targetSdkVersion 31
     versionCode 10
     versionName '0.10'
-    multiDexEnabled true
+    //multiDexEnabled true
   }
 
   compileOptions {
@@ -39,7 +39,7 @@ android {
 
 dependencies {
   implementation 'androidx.appcompat:appcompat:1.4.1'
-  implementation 'androidx.multidex:multidex:2.0.1'
+  //implementation 'androidx.multidex:multidex:2.0.1'
   api(name:'leanConnectInterfaceLib-debug', ext:'aar')
   api(name:'leanConnectLibForServices-debug', ext:'aar')
 }
