--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -4,7 +4,8 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:7.1.1'
+    //classpath 'com.android.tools.build:gradle:7.1.1'
+    classpath 'com.android.tools.build:gradle:4.0.0' 
   }
 }
 
@@ -39,7 +40,6 @@ android {
 
 dependencies {
   implementation 'androidx.appcompat:appcompat:1.4.1'
-  implementation 'androidx.core:core:1.7.0'
   implementation 'androidx.multidex:multidex:2.0.1'
   api(name:'leanConnectInterfaceLib-debug', ext:'aar')
   api(name:'leanConnectLibForServices-debug', ext:'aar')
