--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -21,7 +21,7 @@ allprojects {
 android {
   compileSdkVersion 31
   buildToolsVersion '30.0.2'
-  androidXCore "1.7.0"
+  pippo "1.7.0"
 
   defaultConfig {
     minSdkVersion 22
