--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -27,7 +27,7 @@ android {
     targetSdkVersion 31
     versionCode 10
     versionName '0.10'
-    multiDexEnabled true
+    //multiDexEnabled true
   }
 
   compileOptions {
@@ -39,7 +39,7 @@ android {
 dependencies {
   implementation 'androidx.appcompat:appcompat:1.4.1'
   implementation "androidx.core:core-ktx:1.6.0"
-  implementation 'androidx.multidex:multidex:2.0.1'
+  //implementation 'androidx.multidex:multidex:2.0.1'
   api(name:'leanConnectInterfaceLib-debug', ext:'aar')
   api(name:'leanConnectLibForServices-debug', ext:'aar')
 }
