--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -6,6 +6,9 @@ buildscript {
   dependencies {
     classpath 'com.android.tools.build:gradle:7.1.2'
   }
+  ext {
+    androidXCore = "1.7.0" 
+  }
 }
 
 allprojects {
@@ -27,7 +30,6 @@ android {
     targetSdkVersion 31
     versionCode 10
     versionName '0.10'
-    //multiDexEnabled true
   }
 
   compileOptions {
@@ -38,8 +40,7 @@ android {
 
 dependencies {
   implementation 'androidx.appcompat:appcompat:1.4.1'
-  implementation "androidx.core:core-ktx:1.6.0"
-  //implementation 'androidx.multidex:multidex:2.0.1'
+  implementation "androidx.core:core-ktx:1.7.0"
   api(name:'leanConnectInterfaceLib-debug', ext:'aar')
   api(name:'leanConnectLibForServices-debug', ext:'aar')
 }
