--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -19,7 +19,7 @@ allprojects {
 
 android {
   compileSdkVersion 31
-  buildToolsVersion '30.0.2'
+  //buildToolsVersion '30.0.2'
 
   defaultConfig {
     minSdkVersion 22
@@ -35,7 +35,7 @@ android {
 }
 
 dependencies {
-  implementation 'androidx.appcompat:appcompat:1.3.1'
+  implementation 'androidx.appcompat:appcompat:1.4.1'
   implementation "androidx.core:core-ktx:1.6.0"
   api(name:'leanConnectInterfaceLib-debug', ext:'aar')
   api(name:'leanConnectLibForServices-debug', ext:'aar')
