--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -37,8 +37,8 @@ android {
 
 dependencies {
   implementation 'androidx.appcompat:appcompat:1.4.1'
-  //implementation "androidx.core:core-ktx:1.7.0"
-  
+  implementation "androidx.core:core-ktx:1.7.0"
+
   api(name:'leanConnectInterfaceLib-debug', ext:'aar')
   api(name:'leanConnectLibForServices-debug', ext:'aar')
 }
