--- a/src/android/LeanConnectPlugin.gradle
+++ b/src/android/LeanConnectPlugin.gradle
@@ -20,7 +20,7 @@ allprojects {
 
 android {
   compileSdkVersion 31
-  buildToolsVersion '30.0.2'
+  //buildToolsVersion '30.0.2'
 
   defaultConfig {
     minSdkVersion 22
