add framework to ios

--- a/plugin.xml
+++ b/plugin.xml
@@ -26,9 +26,9 @@
 				<param name="ios-package" value="LeanConnectPlugin" />
 			</feature>
 		</config-file>
-		<source-file src="src/ios/LeanConnectPlugin.m" />
 		<header-file src="src/ios/LeanConnectPlugin.h" />
-		<resource-file src="src/ios/libs/leanConnectInterfaceLib-debug.aar" />
-		<resource-file src="src/ios/libs/leanConnectLibForServices-debug.aar" />
+		<source-file src="src/ios/LeanConnectPlugin.m" />
+		<source-file src="src/ios/libs/LeanConnectMobile.framework" target-dir="lib" framework="true" />
+		<framework src="src/ios/libs/LeanConnectMobile.framework" embed="true" custom="true" />
 	</platform>
 </plugin>
