--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="info.androidabcd.plugins.leanconnect" version="0.10.0"
+<plugin id="cordova-plugin-mobile-leanconnect" version="0.10.0"
 	xmlns="http://apache.org/cordova/ns/plugins/1.0"
 	xmlns:android="http://schemas.android.com/apk/res/android">
 	<name>LeanConnectPlugin</name>
@@ -9,7 +9,7 @@
 	<platform name="android">
 		<config-file parent="/*" target="res/xml/config.xml">
 			<feature name="LeanConnectPlugin">
-				<param name="android-package" value="info.androidabcd.plugins.leanconnect.LeanConnectPlugin" />
+				<param name="android-package" value="com.mobile.leanconnect.LeanConnectPlugin" />
 			</feature>
 		</config-file>
 		<config-file parent="/*" target="AndroidManifest.xml">
@@ -28,7 +28,7 @@
 		</config-file>
 		<header-file src="src/ios/LeanConnectPlugin.h" />
 		<source-file src="src/ios/LeanConnectPlugin.m" />
-		<source-file src="src/ios/libs/LeanConnectMobile.framework" target-dir="lib" framework="true" />
+		<source-file src="src/ios/libs/LeanConnectMobile.framework" target-dir="libs" framework="true" />
 		<framework src="src/ios/libs/LeanConnectMobile.framework" embed="true" custom="true" />
 	</platform>
 </plugin>
