--- a/plugin.xml
+++ b/plugin.xml
@@ -28,7 +28,7 @@
 		</config-file>
 		<source-file src="src/ios/LeanConnectPlugin.swift" />
 		<source-file src="src/ios/libs/LeanConnectMobileKit.framework" target-dir="libs" framework="true" />
-		<!--framework src="src/ios/libs/LeanConnectMobileKit.framework" embed="false" custom="true" /-->
+		<framework src="src/ios/libs/LeanConnectMobileKit.framework" embed="false" custom="true" />
 		<podspec>
 			<config>
 				<source url="https://cdn.cocoapods.org/"/>
