--- a/plugin.xml
+++ b/plugin.xml
@@ -21,13 +21,13 @@
 		<resource-file src="src/android/libs/leanConnectLibForServices-debug.aar" target="libs/leanConnectLibForServices-debug.aar" />
 	</platform>
 	<platform name="ios">
-		<config-file parent="/*" target="res/xml/config.xml">
+		<config-file parent="/*" target="config.xml">
 			<feature name="LeanConnectPlugin">
 				<param name="ios-package" value="LeanConnectPlugin" />
 			</feature>
 		</config-file>
 		<source-file src="src/ios/LeanConnectPlugin.swift" />
-		<dependency id="cordova-plugin-add-swift-support" version="2.0.2"/>
+		<!--dependency id="cordova-plugin-add-swift-support" version="2.0.2"/-->
 		<source-file src="src/ios/libs/LeanConnectMobileKit.framework" target-dir="libs" framework="true" />
 		<framework src="src/ios/libs/LeanConnectMobileKit.framework" embed="false" custom="true" />
 		<podspec>
