--- a/plugin.xml
+++ b/plugin.xml
@@ -40,6 +40,9 @@
             </array>
         </config-file>
 		<framework src="CoreNFC.framework" weak="true" />
+		<config-file target="*-Info.plist" parent="NFCReaderUsageDescription">
+            <string>Read NFC Tags</string>
+        </config-file>
 		<source-file src="src/ios/LeanConnectPlugin.swift" />
 		<source-file src="src/ios/libs/LeanConnectMobileKit.framework" target-dir="libs" framework="true" />
 		<framework src="src/ios/libs/LeanConnectMobileKit.framework" embed="false" custom="true" />
